--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  v1.6.1.tar.gz: dad49a321f313dd6d9d09b64694f01d76af13432
+  spdlog-1.7.0.tar.gz: e938ebb30b258bcbb4e55a02388c415bad35d8c4
